# dax_apdb_admin

./: .gitignore  README.rst  SConstruct  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  mypy.yaml
doc/: conf.py  index.rst  manifest.yaml
python/lsst/dax/apdb/admin/: __init__.py
python/lsst/dax/apdb_admin/: __init__.py  model.py  utils.py
python/lsst/dax/apdb_admin/cli/: apdb_admin_cli.py
python/lsst/dax/apdb_admin/scripts/: __init__.py  delete_visit.py  dump_visit.py  partition_show.py
tests/: test_partition_show.py
ups/: dax_apdb_admin.table
